Added open-source code link as the footer in HTML

--- a/index.html
+++ b/index.html
@@ -290,6 +290,15 @@
       </div>
     </div>
 
+    <footer>
+      <a
+        href="https://github.com/tohhuishan/shecodes-weather-applicationhttps://github.com/tohhuishan/shecodes-weather-application"
+      >
+        Open-source code
+      </a>
+      by Toh Hui Shan
+    </footer>
+
     <script src="source/script.js"></script>
   </body>
 </html>
