--- a/index.html
+++ b/index.html
@@ -291,9 +291,7 @@
     </div>
 
     <footer>
-      <a
-        href="https://github.com/tohhuishan/shecodes-weather-applicationhttps://github.com/tohhuishan/shecodes-weather-application"
-      >
+      <a href="https://github.com/tohhuishan/shecodes-weather-application">
         Open-source code
       </a>
       by Toh Hui Shan
