--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@
     </div>
 
     <footer>
-      <a href="https://github.com/tohhuishan/shecodes-weather-application">
+      <a
+        href="https://github.com/tohhuishan/shecodes-weather-application"
+        target="_blank"
+      >
         Open-source code
       </a>
       by Toh Hui Shan
