--- a/index.html
+++ b/index.html
@@ -49,27 +49,26 @@
             </form>
           </div>
 
-          <div class="row current-conditions middle-section-1">
+          <div class="row current-conditions middle-section">
             <div class="col-9 left-side">
               <div class="displayed-location-with-icon">
                 <h1>
                   <i class="fa-solid fa-location-dot location-icon"></i>
-                  <span class="searched-location">Moscow</span>
+                  <span class="searched-location"></span>
                 </h1>
               </div>
 
               <div class="row current-weather-and-temperature">
                 <div class="col-6 current-weather">
-                  <h2>
-                    <i class="fa-solid fa-cloud-rain"></i>
-                  </h2>
+                  <img src="" alt="" class="current-weather-icon" />
                 </div>
 
                 <div class="col-6 current-temperature">
                   <h2>
-                    <span class="temperature celsius" id="current-temperature"
-                      >27</span
-                    >
+                    <span
+                      class="temperature celsius"
+                      id="current-temperature"
+                    ></span>
                     <span class="temperature-units-conversion">
                       <a href="#" class="celsius-link">°C </a>
                       <span class="divider"> | </span>
@@ -81,195 +80,161 @@
             </div>
 
             <div class="col-3 right-side">
+              <div class="last-updated">
+                <h3>Last updated:</h3>
+              </div>
+
               <div class="current-day">
-                <h3>Sunday</h3>
+                <h3></h3>
               </div>
 
               <div class="current-date">
                 <h3>
-                  <span class="current-date-number">1 </span>
-                  <span class="current-month">January </span>
-                  <span class="current-year">2023</span>
+                  <span class="current-date-number"></span>
+                  <span class="current-month"></span>
+                  <span class="current-year"></span>
                 </h3>
               </div>
 
               <div class="current-time">
                 <h3>
-                  <span class="current-hour">12</span>
+                  <span class="current-hour"></span>
                   :
-                  <span class="current-minute">34</span>
+                  <span class="current-minute"></span>
                 </h3>
               </div>
 
               <div class="current-humidity">
                 <h3>
                   Humidity:
-                  <span class="current-humidity"> 90</span>%
+                  <span class="current-humidity"></span>%
                 </h3>
               </div>
 
               <div class="current-wind">
-                <h3>Wind: <span class="current-wind">5</span> m/s</h3>
+                <h3>Wind: <span class="current-wind"></span> m/s</h3>
               </div>
             </div>
           </div>
 
-          <div class="forecast-conditions bottom-section">
-            <div class="row forecast-conditions bottom-section-1">
-              <div class="col-3">
-                <div class="forecast-day-1">
-                  <h4>Mon</h4>
-                </div>
-
-                <div class="forecast-weather-1">
-                  <h4>
-                    <i class="fa-solid fa-sun"></i>
-                  </h4>
-                </div>
-
-                <div class="forecast-min-and-max-temperature-1">
-                  <span class="forecast-min-temperature-1">
-                    <h4>24°C</h4>
-                  </span>
-
-                  <span class="forecast-max-temperature-1">
-                    <h4>33°C</h4>
-                  </span>
-                </div>
+          <div class="row forecast-conditions bottom-section">
+            <div class="col-2">
+              <div class="forecast-day-1">
+                <h4></h4>
               </div>
 
-              <div class="col-3">
-                <div class="forecast-day-2">
-                  <h4>Tue</h4>
-                </div>
-
-                <div class="forecast-weather-2">
-                  <h4>
-                    <i class="fa-solid fa-cloud-showers-heavy"></i>
-                  </h4>
-                </div>
-
-                <div class="forecast-min-and-max-temperature-2">
-                  <span class="forecast-min-temperature-2">
-                    <h4>23°C</h4>
-                  </span>
-
-                  <span class="forecast-max-temperature-2">
-                    <h4>29°C</h4>
-                  </span>
-                </div>
+              <div class="forecast-weather-1">
+                <h4></h4>
               </div>
 
-              <div class="col-3">
-                <div class="forecast-day-3">
-                  <h4>Wed</h4>
-                </div>
+              <div class="forecast-min-and-max-temperature-1">
+                <span class="forecast-min-temperature-1">
+                  <h4></h4>
+                </span>
 
-                <div class="forecast-weather-3">
-                  <h4>
-                    <i class="fa-solid fa-cloud-sun"></i>
-                  </h4>
-                </div>
-
-                <div class="forecast-min-and-max-temperature-3">
-                  <span class="forecast-min-temperature">
-                    <h4>23°C</h4>
-                  </span>
-
-                  <span class="forecast-max-temperature">
-                    <h4>31°C</h4>
-                  </span>
-                </div>
-              </div>
-
-              <div class="col-3">
-                <div class="forecast-day-4">
-                  <h4>Thu</h4>
-                </div>
-
-                <div class="forecast-weather-4">
-                  <h4>
-                    <i class="fa-solid fa-cloud-bolt"></i>
-                  </h4>
-                </div>
-
-                <div class="forecast-min-and-max-temperature-4">
-                  <span class="forecast-min-temperature">
-                    <h4>24°C</h4>
-                  </span>
-
-                  <span class="forecast-max-temperature">
-                    <h4>30°C</h4>
-                  </span>
-                </div>
+                <span class="forecast-max-temperature-1">
+                  <h4></h4>
+                </span>
               </div>
             </div>
 
-            <div class="row forecast-conditions bottom-section-2">
-              <div class="col-4">
-                <div class="forecast-day-5">
-                  <h4>Fri</h4>
-                </div>
-
-                <div class="forecast-weather-5">
-                  <h4>
-                    <i class="fa-solid fa-wind"></i>
-                  </h4>
-                </div>
-
-                <div class="forecast-min-and-max-temperature-5">
-                  <span class="forecast-min-temperature">
-                    <h4>25°C</h4>
-                  </span>
-
-                  <span class="forecast-max-temperature">
-                    <h4>32°C</h4>
-                  </span>
-                </div>
+            <div class="col-2">
+              <div class="forecast-day-2">
+                <h4></h4>
               </div>
 
-              <div class="col-4">
-                <div class="forecast-day-6">
-                  <h4>Sat</h4>
-                </div>
-
-                <div class="forecast-weather-6">
-                  <h4>
-                    <i class="fa-solid fa-cloud-showers-heavy"></i>
-                  </h4>
-                </div>
-
-                <div class="forecast-min-and-max-temperature-6">
-                  <span class="forecast-min-temperature">
-                    <h4>22°C</h4>
-                  </span>
-
-                  <span class="forecast-max-temperature">
-                    <h4>28°C</h4>
-                  </span>
-                </div>
+              <div class="forecast-weather-2">
+                <h4></h4>
               </div>
 
-              <div class="col-4">
-                <div class="forecast-day-7">
-                  <h4>Sun</h4>
-                </div>
+              <div class="forecast-min-and-max-temperature-2">
+                <span class="forecast-min-temperature-2">
+                  <h4></h4>
+                </span>
 
-                <div class="forecast-weather-7">
-                  <h4>
-                    <i class="fa-solid fa-snowflake"></i>
-                  </h4>
-                </div>
+                <span class="forecast-max-temperature-2">
+                  <h4></h4>
+                </span>
+              </div>
+            </div>
 
-                <div class="forecast-min-and-max-temperature-7">
-                  <span class="forecast-min-temperature">
-                    <h4>2°C</h4>
-                  </span>
+            <div class="col-2">
+              <div class="forecast-day-3">
+                <h4></h4>
+              </div>
 
-                  <span class="forecast-max-temperature">
-                    <h4>10°C</h4>
-                  </span>
-                </div>
+              <div class="forecast-weather-3">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-min-and-max-temperature-3">
+                <span class="forecast-min-temperature">
+                  <h4></h4>
+                </span>
+
+                <span class="forecast-max-temperature">
+                  <h4></h4>
+                </span>
+              </div>
+            </div>
+
+            <div class="col-2">
+              <div class="forecast-day-4">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-weather-4">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-min-and-max-temperature-4">
+                <span class="forecast-min-temperature">
+                  <h4></h4>
+                </span>
+
+                <span class="forecast-max-temperature">
+                  <h4></h4>
+                </span>
+              </div>
+            </div>
+
+            <div class="col-2">
+              <div class="forecast-day-5">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-weather-5">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-min-and-max-temperature-5">
+                <span class="forecast-min-temperature">
+                  <h4></h4>
+                </span>
+
+                <span class="forecast-max-temperature">
+                  <h4></h4>
+                </span>
+              </div>
+            </div>
+
+            <div class="col-2">
+              <div class="forecast-day-6">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-weather-6">
+                <h4></h4>
+              </div>
+
+              <div class="forecast-min-and-max-temperature-6">
+                <span class="forecast-min-temperature">
+                  <h4></h4>
+                </span>
+
+                <span class="forecast-max-temperature">
+                  <h4></h4>
+                </span>
               </div>
             </div>
           </div>
