Added temperature conversion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                       id="current-temperature"
                     ></span>
                     <span class="temperature-units-conversion">
-                      <a href="#" class="celsius-link">°C </a>
+                      <a href="#" class="celsius-link active">°C </a>
                       <span class="divider"> | </span>
                       <a href="#" class="fahrenheit-link">°F </a>
                     </span>
