Edited the theme according to local time (light and dark)

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </div>
           </div>
 
-          <div class="footer">
+          <div class="find-current-location">
             <h2>
               Don't know your current location? Click icon to check the weather
               here
@@ -259,10 +259,12 @@
       <a
         href="https://github.com/tohhuishan/shecodes-weather-application"
         target="_blank"
+        class="open-source-code"
       >
         Open-source code
       </a>
-      by Toh Hui Shan
+
+      <span class="developer-name"> by Toh Hui Shan </span>
     </footer>
 
     <script src="source/script.js"></script>
