Added forecast feature and re-adjust the app size

--- a/index.html
+++ b/index.html
@@ -117,127 +117,10 @@
             </div>
           </div>
 
-          <div class="row forecast-conditions bottom-section">
-            <div class="col-2">
-              <div class="forecast-day-1">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-weather-1">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-min-and-max-temperature-1">
-                <span class="forecast-min-temperature-1">
-                  <h4></h4>
-                </span>
-
-                <span class="forecast-max-temperature-1">
-                  <h4></h4>
-                </span>
-              </div>
-            </div>
-
-            <div class="col-2">
-              <div class="forecast-day-2">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-weather-2">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-min-and-max-temperature-2">
-                <span class="forecast-min-temperature-2">
-                  <h4></h4>
-                </span>
-
-                <span class="forecast-max-temperature-2">
-                  <h4></h4>
-                </span>
-              </div>
-            </div>
-
-            <div class="col-2">
-              <div class="forecast-day-3">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-weather-3">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-min-and-max-temperature-3">
-                <span class="forecast-min-temperature">
-                  <h4></h4>
-                </span>
-
-                <span class="forecast-max-temperature">
-                  <h4></h4>
-                </span>
-              </div>
-            </div>
-
-            <div class="col-2">
-              <div class="forecast-day-4">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-weather-4">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-min-and-max-temperature-4">
-                <span class="forecast-min-temperature">
-                  <h4></h4>
-                </span>
-
-                <span class="forecast-max-temperature">
-                  <h4></h4>
-                </span>
-              </div>
-            </div>
-
-            <div class="col-2">
-              <div class="forecast-day-5">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-weather-5">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-min-and-max-temperature-5">
-                <span class="forecast-min-temperature">
-                  <h4></h4>
-                </span>
-
-                <span class="forecast-max-temperature">
-                  <h4></h4>
-                </span>
-              </div>
-            </div>
-
-            <div class="col-2">
-              <div class="forecast-day-6">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-weather-6">
-                <h4></h4>
-              </div>
-
-              <div class="forecast-min-and-max-temperature-6">
-                <span class="forecast-min-temperature">
-                  <h4></h4>
-                </span>
-
-                <span class="forecast-max-temperature">
-                  <h4></h4>
-                </span>
-              </div>
-            </div>
-          </div>
+          <div
+            class="row forecast-conditions bottom-section"
+            id="forecast"
+          ></div>
 
           <div class="find-current-location">
             <h2>
