Added responsiveness to the app

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="card-body">
           <div class="search-city top-section">
             <form action="submit" class="form-group row search-input-form">
-              <div class="col-11">
+              <div class="col-md-11">
                 <input
                   class="form-control input-city"
                   type="text"
@@ -41,7 +41,7 @@
                 />
               </div>
 
-              <div class="col-1">
+              <div class="col-md-1">
                 <button class="form-control search-button" type="submit">
                   <i class="fa-solid fa-magnifying-glass search-icon"></i>
                 </button>
@@ -50,7 +50,7 @@
           </div>
 
           <div class="row current-conditions middle-section">
-            <div class="col-9 left-side">
+            <div class="col-md-9 left-side">
               <div class="displayed-location-with-icon">
                 <h1>
                   <i class="fa-solid fa-location-dot location-icon"></i>
@@ -59,11 +59,11 @@
               </div>
 
               <div class="row current-weather-and-temperature">
-                <div class="col-6 current-weather">
+                <div class="col-md-6 current-weather">
                   <img src="" alt="" class="current-weather-icon" />
                 </div>
 
-                <div class="col-6 current-temperature">
+                <div class="col-md-6 current-temperature">
                   <h2>
                     <span
                       class="temperature celsius"
@@ -79,7 +79,7 @@
               </div>
             </div>
 
-            <div class="col-3 right-side">
+            <div class="col-md-3 right-side">
               <div class="last-updated">
                 <h3>Last updated:</h3>
               </div>
